--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                 <div class="progress-fill" id="progressBar" style="width: 0%"></div>
             </div>
 
-            <form id="longevityForm" action="https://formspree.io/f/xnnqgjvb" method="POST">
+            <form id="longevityForm" action="https://formspree.io/f/mvzzgzeo" method="POST">
                 <!-- Section 1: Basic Information -->
                 <div class="section-card">
                     <div class="section-header">
